--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -83,6 +83,20 @@ header #hero-text,
   filter: saturate(2);
 }
 
+#hero-image a {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+#hero-image a:focus {
+  outline: none !important;
+}
+
 #about {
   display: flex;
   flex-direction: row;
